[package]
name = "postgres_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
rust_decimal = "1.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_postgres = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"]}
